--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
-<!DOCTYPE html>
+
+
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your ARG Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ARG Project</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to the ARG World</h1>
-        <p>Your mysterious journey begins here...</p>
-    </header>
 
-    <main>
-        <section id="clue1">
-            <h2>Clue #1</h2>
-            <p>This is the first clue, hidden somewhere in the text. Can you find it?</p>
-            <button id="revealClue">Reveal Clue</button>
-            <p id="hiddenClue" style="display: none;">The hidden clue is: <span class="clue-text">X marks the spot</span></p>
-        </section>
+    <h1>Project Under Construction</h1>
+    <h2>More coming soon...</h2>
+    <p id="construction-text">Our team is currently working on something big. Stay tuned for updates!</p>
 
-        <section id="puzzle">
-            <h2>Puzzle</h2>
-            <p>Can you solve the puzzle? What is 5 + 3?</p>
-            <input type="text" id="puzzleAnswer" placeholder="Your answer">
-            <button id="submitPuzzle">Submit</button>
-            <p id="puzzleResult"></p>
-        </section>
-    </main>
+    <!-- Placeholder items to create the "under construction" feel -->
+    <div id="placeholders">
+        <div class="placeholder-item">
+            <p>Placeholder 1</p>
+        </div>
+        <div class="placeholder-item">
+            <p>Placeholder 2</p>
+        </div>
+        <div class="placeholder-item">
+            <p>Placeholder 3</p>
+        </div>
+    </div>
 
-    <footer>
-        <p>Created by That Firey Kid</p>
-    </footer>
+    <!-- Hidden link for the ARG to give clues -->
+    <a href="#" id="hidden-link">Click here for more info...</a>
 
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
